[gd_scene load_steps=3 format=3 uid="uid://ffmxaf82tmg8"]

[ext_resource type="Script" uid="uid://hx2wanxnphuw" path="res://Game/Sex/anim_scene_player.gd" id="1_agggj"]
[ext_resource type="PackedScene" uid="uid://ksjqa2qu5isd" path="res://AnimScenes/anim_scene_spawner.tscn" id="2_2pw81"]

[node name="AnimScenePlayer" type="Node3D"]
script = ExtResource("1_agggj")

[node name="AnimSceneSpawner" parent="." instance=ExtResource("2_2pw81")]
unique_name_in_owner = true

[connection signal="onAnimEvent" from="AnimSceneSpawner" to="." method="_on_anim_scene_spawner_on_anim_event"]
[connection signal="onSpawnedChanged" from="AnimSceneSpawner" to="." method="_on_anim_scene_spawner_on_spawned_changed"]
